Create JoinInput class and separate JoinResult and JoinReinjectResult